Prevent submit button text from turning invisible when focused. (#128)

--- a/husky_directory/static/css/body.css
+++ b/husky_directory/static/css/body.css
@@ -2178,7 +2178,6 @@ select[multiple].input-lg {
 }
 .btn:hover,
 .btn:focus {
-  color: #ffffff;
   text-decoration: none;
 }
 .btn:active,
